--- a/testsuite/tests/typing-missing-cmi/BUILD.bazel
+++ b/testsuite/tests/typing-missing-cmi/BUILD.bazel
@@ -1,94 +1,49 @@
-# load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
-
 load("//test:rules.bzl",
-     "batch_test_macro",
+     "batch_tests",
+     "compile_module_tests",
+     "module_program_tests",
+     "ocamlcc_diff_tests",
      "test_module",
-     "ocamlcc_diff_tests"
 )
-load("//config:WARNINGS.bzl", "w")
 
 test_suite(
     name = "typing-missing-cmi",
-    tests  = [
-        ":Main_test",
-        # ":Main_ok",
-        # ":Test",
-    ],
+    tests  = [":Main_tests",
+              ":Main_ok_tests"]
 )
 
-# compile_module_testx(
-#     name   = "Main_test",
-#     struct = "main.ml",
-#     deps   = [":A", ":B"],
-#     stdlib_deps   = ["//stdlib:Stdlib"],
-#     opts = ["-verbose"],
-#     suppress_cmi = ["//testsuite/tests/typing-missing-cmi/subdir:M"],
-#     rc_expected = 2,
-#     stderr_actual  = "main.ml.stderr",
-#     stderr_expected = "test.compilers.reference",
-#     # stdout_actual  = "main.stdout",
-#     # timeout = "short",
-#     tags = ["cmi"]
-# )
-
-# ocamlcc_diff_tests(
-#     name = "Main_test",
-#     file1 = "test.compilers.reference",
-#     file2 = ":main.ml.stderr",
-#     timeout = "short",
-#     tags = ["fail"]
-# )
-
-test_module(
-    name   = "Main",
-    struct = "main.ml",
+compile_module_tests(
+    name            = "Main_tests",
+    structfile      = "main.ml",
     deps   = [":A", ":B"],
     stdlib_deps   = ["//stdlib:Stdlib"],
     suppress_cmi = ["//testsuite/tests/typing-missing-cmi/subdir:M"],
     rc_expected = 2,
-    stderr_actual  = "main.ml.stderr",
-    #WARNING: if we omit rc_expected=2, we get:
-    # The following files have no generating action:
-    # testsuite/tests/typing-missing-cmi/main.ml.stderr
+    stderr_expected = ":test.compilers.reference",
+    stderr_actual   = "main.ml.stderr",
 )
 
-# batch_test_macro(
-#     name    = "Main_ok_test",
-#     test_module = ":Main_ok",
-#     stdout_actual  = "main_ok.stdout",
-#     stdout_expected = "main.ml.reference",
-# )
-
-test_module(
-    name   = "Main_ok",
-    struct = "main_ok.ml",
-    deps   = [
-        ":C"
-    ],
+compile_module_tests(
+    name            = "Main_ok_tests",
+    structfile      = "main_ok.ml",
+    deps   = [":C"],
+    stderr_actual   = "main_ok.ml.stderr", # should be empty
 )
 
 test_module(
     name   = "A",
     struct = "a.ml",
-    deps = [
-        "//testsuite/tests/typing-missing-cmi/subdir:M"
-    ],
-    warnings = [w.MISSING_MLI_70]
+    deps = ["//testsuite/tests/typing-missing-cmi/subdir:M"]
 )
 
 test_module(
     name   = "B",
     struct = "b.ml",
-    deps   = [
-        "//testsuite/tests/typing-missing-cmi/subdir:M"
-    ],
-    warnings = [w.MISSING_MLI_70]
+    deps   = ["//testsuite/tests/typing-missing-cmi/subdir:M"]
 )
 
 test_module(
     name   = "C",
     struct = "c.ml",
-    deps   = [
-        "//testsuite/tests/typing-missing-cmi/subdir:M"
-    ],
+    deps   = ["//testsuite/tests/typing-missing-cmi/subdir:M"]
 )
