--- a/testsuite/tests/BUILD.bazel
+++ b/testsuite/tests/BUILD.bazel
@@ -2,9 +2,9 @@ load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
 
 ## enable set -x etc. in sh runner
 bool_flag(name = "verbose", build_setting_default = False,
-          visibility = ["//testsuite/tests:__subpackages__"])
+          visibility = ["//testsuite:__subpackages__"])
 config_setting(name = "verbose?", flag_values = {":verbose": "True"},
-          visibility = ["//testsuite/tests:__subpackages__"])
+          visibility = ["//testsuite:__subpackages__"])
 
 bool_flag( name = "with-stdlib", build_setting_default = False)
 config_setting(name = "with-stdlib?",
