--- a/testsuite/tests/array-functions/BUILD.bazel
+++ b/testsuite/tests/array-functions/BUILD.bazel
@@ -1,28 +1,12 @@
-load("//test:rules.bzl",
-     "batch_test_macro",
-     "test_module",
-)
+load("//test:rules.bzl", "module_program_tests")
 
-test_suite(
-    name = "array-functions",
-    tests  = [
-        ":Test_test",
-    ],
-)
+test_suite(name = "array-functions", tests  = [":Test_tests"])
 
-batch_test_macro(
-    name    = "Test_test",
-    stdout_actual = "test.stdout",
-    stdout_expected = "test.reference",
-    test_module    = ":Test",
+#####################
+module_program_tests(
+    name              = "Test_tests",
+    structfile        = "test.ml",
+    # opts = ["-w", "+a"],
+    stdlib_deps   = ["//stdlib:Stdlib.Array"],
+    stdout_expected   = "test.reference",
 )
-
-test_module(
-    name   = "Test",
-    struct = "test.ml",
-    opts = ["-w", "+a"],
-    stdlib_deps   = [
-        "//stdlib:Stdlib.Array"
-    ]
-)
-
