--- a/testsuite/tests/BUILD.bazel
+++ b/testsuite/tests/BUILD.bazel
@@ -27,6 +27,7 @@ test_suite(
         "//testsuite/tests/typing-missing-cmi",
         "//testsuite/tests/typing-missing-cmi-2",
         "//testsuite/tests/typing-missing-cmi-3",
+        "//testsuite/tests/typing-recmod",
 
         "//testsuite/tests/warnings"
     ],
